Created Add Device Page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
 <body>
     <h1>You've hit the client!</h1>
 
+    <a href="/add_device">Add Device</a>
+
     <h3>Supported Devices</h3>
     <ul id=device-types></ul>
 
