Added changes to support MongoDB conversion

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,11 @@
     <h3>Supported Devices</h3>
     <ul id=device-types></ul>
 
-    <ul id=dht_11s></ul>
+    <h3>Device List</h3>
+    <ul id=devices></ul>
+
+    <h3>Sonoff Devices</h3>
+    <ul id=sonoff-devs></ul>
 
     <script src="http://localhost:3001/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
