Adding devices dynamically to dashboard

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,18 +5,14 @@
     <title>SmartHome Client</title>
 </head>
 <body>
-    <h1>You've hit the client!</h1>
+    <%- include('partials/navbar') %>
 
-    <a href="/add_device">Add Device</a>
-
-    <h3>Supported Devices</h3>
-    <ul id=device-types></ul>
-
-    <h3>Device List</h3>
-    <ul id=devices></ul>
-
-    <h3>Sonoff Devices</h3>
-    <ul id=sonoff-devs></ul>
+    <h3>Devices</h3>
+    <div id="device-panel">
+        <% devices.forEach( dev => { %>
+            <%- include('partials/simple_switch', {device: dev}) %>
+        <% }) %> 
+    </div>
 
     <script src="http://localhost:3001/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
