--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,6 @@
 <div>
     <nav id="main-nav">
-        <a href="/">HomeHub</a>
+        <a id="logo" href="/">HomeHub</a>
+        <a href="/add_device">Add Device</a>
     </nav>
 </div>
