--- a/views/partials/toggle_round.ejs
+++ b/views/partials/toggle_round.ejs
@@ -1,6 +1,4 @@
-<!-- <label class="switch">
+<label class="switch">
     <input type="checkbox">
     <span class="slider round"></span>
-</label> -->
-
-<p>TESTPARTIALTESTPARTIAL</p>
+</label>
