Embellished suport for Sonoff Switches and Sending updates to DB and other Clients

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,14 +9,15 @@
 
     <h3>Devices</h3>
     <div id="device-panel">
-        <% devices.forEach( dev => { %>
+        <!-- <% devices.forEach( dev => { %>
             <%- include('partials/simple_switch', {device: dev}) %>
-        <% }) %> 
+        <% }) %>  -->
     </div>
 
     <script src="http://localhost:3001/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="/scripts/updaters.js"></script>
+    <!-- <script src="/scripts/updaters.js"></script> -->
+    <script src="/scripts/devices.js"></script>
     <script src="/scripts/index.js"></script>
 </body>
 </html>
