--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -2,12 +2,14 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #eee;
     font-family: 'Roboto', sans-serif;
 }
 
 #main-nav {
     display: flex;
     padding: 17px;
+    align-items: center;
     background-color: #fff;
     border-bottom: 1px solid #bbb;
 }
@@ -22,6 +24,12 @@ body {
     color: black;
     font-size: 16px;
     text-decoration: none;
+    -webkit-transition: .2s;
+    transition: .2s;
+}
+
+#main-nav a:hover {
+    color: #2196F3;
 }
 
 #device-panel { 
@@ -31,9 +39,25 @@ body {
     flex-direction: row;
 }
 
-#simple-switch {
-    border: 1px solid black;
+.simple-switch {
+    box-shadow: 1px 1px 4px #ccc;
+    background-color: #fff;
+    border-radius: 5px;
+    display: grid;
+    grid-template-rows: 40% 60%;
     margin: 5px;
     height: 150px;
     width: 125px;
 }
+
+.simple-switch p {
+    grid-row: 1 / 2;
+    margin: auto;
+    padding-top: 25px;
+}
+
+.simple-switch .switch {
+    grid-row: 2 / 3;
+    margin: auto;
+}
+
