--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,3 +3,4 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../styles/base.css">
+<link rel="stylesheet" href="../styles/toggles.css">
