Cleaded up code

--- a/views/add_device.ejs
+++ b/views/add_device.ejs
@@ -26,7 +26,7 @@
                 <p>No device type selected</p>
             </div>
 
-            <div id="sonoff-form">
+            <div class="new-device-form" id="sonoff-form">
 
                     <label for="device-name">Device Name: </label>
                     <input class="device-name" type="text">
@@ -35,7 +35,7 @@
                 
             </div>
 
-            <div id="yeelight-form">
+            <div class="new-device-form" id="yeelight-form">
 
                 <label for="device-name">Device Name: </label>
                 <input class="device-name" type="text">
